<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.sc.senai.carlos.churrascometro.EndActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_large_material"
        android:paddingBottom="24dp"/>

    <TextView
        android:id="@+id/lista_de_compras"
        android:text="@string/lista_de_compras"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="24dp"/>

    <TextView
        android:id="@+id/carne"
        android:text="@string/carne"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/lista_de_compras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/carne_calculada"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/lista_de_compras"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/linguica"
        android:text="@string/linguica"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/carne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/linguica_calculada"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/carne"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/refri"
        android:text="@string/refri"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/linguica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/refri_calculada"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/linguica"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
