<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.sc.senai.carlos.churrascometro.QuestionThree">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_large_material"
        android:paddingBottom="48dp"/>

    <TextView
        android:id="@+id/text_question_three"
        android:text="@string/question_three"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_question_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_question_three"
        android:inputType="number" />

    <Button
        android:id="@+id/button_question_three"
        android:layout_below="@+id/edit_question_three"
        android:layout_width="96dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="readQuestionThree"/>

</RelativeLayout>
